# access-request-classifier

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  schemas.py
app/db/: models.py  models_test.py  seed.py  seed_test.py  session.py
app/llm/: classifier.py  classifier_test.py  default_provider.py  default_provider_test.py  protocol.py
app/llm/prompts/: classification_prompt.txt
app/repositories/: audit.py  audit_test.py
app/routers/: access_requests.py  access_requests_test.py
app/schemas/: __init__.py  classification_schema.py
app/services/: anomaly.py  anomaly_test.py  approver.py  approver_test.py  role_mapping.py  role_mapping_test.py  routing.py  routing_test.py
app/ui/: routes.py  routes_test.py
app/ui/templates/: review_detail.html  review_queue.html  submit.html
scripts/: create_feature_branch.sh
tests/: conftest.py  test_anomaly_cold_start.py  test_audit_trail.py  test_classification_schema.py  test_e2e.py  test_routing_integration.py
